--- a/demo/day100/day009.html
+++ b/demo/day100/day009.html
@@ -1,53 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Day 009 - 元素拖动</title>
     <style>
-        .column{
+        #container {
+            width: 100%;
+            height: 500px;
+            background-color: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            border-radius: 7px;
+            touch-action: none;
+        }
+
+        #item {
             width: 100px;
             height: 100px;
-            line-height: 100px;
-            text-align: center;
-            border-radius: 5px;
-            border: 1px solid rgb(189, 189, 189);
-            display: inline-block;
-            box-shadow: inset 0 0 20px 2px lightgray;
-            box-sizing: border-box;
-            cursor: move;
+            background-color: rgb(245, 230, 99);
+            border: 10px solid rgba(136, 136, 136, .5);
+            border-radius: 50%;
+            touch-action: none;
+            user-select: none;
+        }
+
+        #item:active {
+            background-color: rgba(168, 218, 220, 1.00);
+        }
+
+        #item:hover {
+            cursor: pointer;
+            border-width: 20px;
         }
     </style>
 </head>
+
 <body>
-    <div class="wrap">
-        <div class="column" draggable="true">1</div>
-        <div class="column" draggable="true">2</div>
-        <div class="column" draggable="true">3</div>
-        <div class="column" draggable="true">4</div>
+    <div id="outerContainer">
+        <div id="container">
+            <div id="item">
+
+            </div>
+        </div>
     </div>
 
     <script>
-        let column = Array.from(document.querySelectorAll('.column'));
-        column.forEach((ele, ind, arr) => {
-            ele.addEventListener('dragstart', function(e){
-                this.style.opcity = '.4';
-                e.dataTransfer.effectAllowed = 'move';
-                e.dataTransfer.setData('text/html', this.innerHTML);
-            }, false);
-            ele.addEventListener('dragenter', function(e){
+        var dragItem = document.querySelector("#item");
+        var container = document.querySelector("#container");
+
+        var active = false;
+        var currentX;
+        var currentY;
+        var initialX;
+        var initialY;
+        var xOffset = 0;
+        var yOffset = 0;
+
+        container.addEventListener("touchstart", dragStart, false);
+        container.addEventListener("touchend", dragEnd, false);
+        container.addEventListener("touchmove", drag, false);
+
+        container.addEventListener("mousedown", dragStart, false);
+        container.addEventListener("mouseup", dragEnd, false);
+        container.addEventListener("mousemove", drag, false);
+
+        function dragStart(e) {
+            if (e.type === "touchstart") {
+                initialX = e.touches[0].clientX - xOffset;
+                initialY = e.touches[0].clientY - yOffset;
+            } else {
+                initialX = e.clientX - xOffset;
+                initialY = e.clientY - yOffset;
+            }
+
+            if (e.target === dragItem) {
+                active = true;
+            }
+        }
+
+        function dragEnd(e) {
+            initialX = currentX;
+            initialY = currentY;
+
+            active = false;
+        }
+
+        function drag(e) {
+            if (active) {
+
                 e.preventDefault();
-                this.style.border = '1px solid gray';
-            }, false);
-            ele.addEventListener('dragleave', function(e){
-                this.style.border = '1px solid rgb(189, 189, 189)';
-            }, false);
-            ele.addEventListener('drop', function(e){
-                e.stopPropagation();
-                this.innerHTML = e.dataTransfer.getData('text/html');
-            }, false);
-        })
+
+                if (e.type === "touchmove") {
+                    currentX = e.touches[0].clientX - initialX;
+                    currentY = e.touches[0].clientY - initialY;
+                } else {
+                    currentX = e.clientX - initialX;
+                    currentY = e.clientY - initialY;
+                }
+
+                xOffset = currentX;
+                yOffset = currentY;
+
+                setTranslate(currentX, currentY, dragItem);
+            }
+        }
+
+        function setTranslate(xPos, yPos, el) {
+            el.style.transform = `translate3d(${xPos}px, ${yPos}px, 0)`;
+        }
     </script>
 </body>
+
 </html>
+
+<!-- https://www.kirupa.com/html5/drag.htm -->
