--- a/demo/day100/day009.html
+++ b/demo/day100/day009.html
@@ -9,8 +9,8 @@
     <style>
         #container {
             width: 100%;
-            height: 500px;
-            background-color: #333;
+            height: 97vh;
+            background: #333;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -22,20 +22,22 @@
         #item {
             width: 100px;
             height: 100px;
-            background-color: rgb(245, 230, 99);
-            border: 10px solid rgba(136, 136, 136, .5);
+            line-height: 100px;
+            text-align: center;
+            background: rgb(245, 230, 99);
             border-radius: 50%;
             touch-action: none;
             user-select: none;
-        }
-
-        #item:active {
-            background-color: rgba(168, 218, 220, 1.00);
+            cursor: pointer;
         }
 
         #item:hover {
-            cursor: pointer;
-            border-width: 20px;
+            background: gray;
+            color: white;
+        }
+
+        #item:active {
+            background: red;
         }
     </style>
 </head>
@@ -44,7 +46,7 @@
     <div id="outerContainer">
         <div id="container">
             <div id="item">
-
+                Drag me
             </div>
         </div>
     </div>
