--- a/demo/day100/day002.html
+++ b/demo/day100/day002.html
@@ -1,97 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Day 002 - 轮播图</title>
     <style>
-        .wrap{
-            width: 1200px;
-            height: 800px;
-            border: 1px solid gray;
-        }
-        .show{
+        .slideshow{
             position: relative;
-            width: 1200px;
-            height: 700px;
-        }
-        .show img{
-            position: absolute;
-            margin: auto;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            max-width: 1200px;
-            max-height: 700px;
-        }
-        .thumbnail{
-            position: relative;
-            width: 1200px;
-            height: 100px;
-        }
-        .thumbnail img{
-            position: relative;
+            width: 700px;
+            height: 400px;
             outline: 1px solid gray;
-            width: 100px;
-            height: 100px;
-            float: left;
-            transition: all .2s ease-in-out;
+            overflow: hidden;
         }
-        .thumbnail img:hover{
-            transform: translateY(10px);
+        .wrap{
+            position: relative;
+            width: 7000px;
+            height: 400px;
+        }
+        img{
+            width: 700px;
+            height: 400px;
+            float: left;
+        }
+        .prenext > div{
+            position: relative;
+            float: left;
+            bottom: 250px;
+            width: 30px;
+            height: 60px;
+            background: gray;
+            text-align: center;
+            line-height: 60px;
+            cursor: pointer;
+            transition: 200ms;
+        }
+        .prenext > div:nth-of-type(2){
+            left: 640px;
+        }
+        .prenext > div:hover{
+            opacity: .5;
+            color: white;
+        }
+        .dot{
+            position: relative;
+            bottom: 30px;
+            margin-left: 10px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: white;
+            border: 1px solid black;
+            float: left;
+            cursor: pointer;
+            transition: 200ms;
+        }
+        .dot:hover{
+            border-color: white;
+            box-shadow: 0 0 5px 5px red;
+        }
+        .on{
+            border-color: white;
+            box-shadow: 0 0 5px 5px red;
         }
     </style>
 </head>
 <body>
-    <div class="wrap">
-        <div class="show">
-            <img src="http://img.hb.aicdn.com/108089c6c77114cf8b23cc37c46f8d8b9688cb5035885-rg3b6r_fw658" alt="">
+    <div class="slideshow">
+        <div class="wrap">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fc9a4158.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fc9d2c4d.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fc9dbc71.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca186a5.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca1d937.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca21ad0.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca26652.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca299cc.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca2d9f7.jpg" alt="">
+            <img src="https://i.loli.net/2019/03/06/5c7f7fca31b7f.jpg" alt="">
         </div>
-        <div class="thumbnail">
-            <img src="http://img.hb.aicdn.com/108089c6c77114cf8b23cc37c46f8d8b9688cb5035885-rg3b6r_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/eee25bfc3c7a141c2990fa9d357ba2e697f96a47b2480-csTfpD_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/519246b8d55a8633b1015992f01f7f9d4fd3f3b316c32-5pBtGP_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/12445ac618227636dd84a66a5754f2ef7a4f44461ae06-fp1Awu_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/e6fcc80eeab06821b436b3b9de277646011b63e635eed-ruHg7s_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/2814bd1b48ce619adb60497b6cd4cd6fb75baf453ebc2-8erIho_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/a26e309f9f2e5f0898155a3d1ca2c934ecf4b502ba46f-udPMvZ_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/ec33d9d99bd0b21a066139f97acdda90903ecf7a15c165-XQbh43_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/5a30fa64fe265ecabe380e00e96cd7f70ca30957476ed-Zc1jmr_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/1c179def1641c67ea72de8027a1f577986e807ad2e61a-26BHMO_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/ec5d8136547fd6b853738e52ee4456437c5b9d9425d0a-HEcXLp_fw658" alt="">
-            <img src="http://img.hb.aicdn.com/43ff1009a07e6132756b515adad011402055ff3d62a11-LnYOuz_fw658" alt="">
+        <div class="prenext">
+            <div class="pre">&lt;</div>
+            <div class="next">&gt;</div>
+        </div>
+        <div class="dots">
+            <div class="dot on"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
         </div>
     </div>
     <script>
-        // 点击后显示相应的图片
-        let showImg = document.getElementsByClassName("show")[0].getElementsByTagName("img")[0];
-        let thumbnails = document.getElementsByClassName("thumbnail")[0].querySelectorAll("img");
-        let index = 0;
+        let wrap = document.getElementsByClassName('warp')[0];
+        let pre = document.getElementsByClassName('pre')[0];
+        let next = document.getElementsByClassName('next')[0];
 
-        for (let i = 0; i < thumbnails.length; i++){
-            thumbnails[i].addEventListener("click", function(e){
-                showImg.src = this.src;
-            }, false);
+        function preImg(offset){
+            wrap.style.left = offset + 'px';
         }
+        function nextImg(){}
 
-        // 自动显示图片
-        setInterval(function () {
-            for (let i = 0; i < thumbnails.length; i++){
-                thumbnails[i].style.transform = "translateY(0px)";
-            }
-
-            showImg.src = thumbnails[index].src;
-            thumbnails[index].style.transform = "translateY(10px)";
-
-            if(index > 10){
-                index = 0;
-            } else {
-                index++
-            }
-        }, 3000)
+        pre.addEventListener('click', preImg(-800), false);
+        next.addEventListener('click', function(){}, false);
     </script>
 </body>
 </html>
