--- a/demo/windows10/index.html
+++ b/demo/windows10/index.html
@@ -41,8 +41,27 @@
     <div id="taskbar">
       <!-- 任务栏左侧图标 -->
       <div id="taskbar-wrap">
-        <div class="taskbar-icon" title="windows start">
+        <div class="taskbar-icon startup" title="windows start">
           <img src="img/logo_windows_start.png" alt="">
+          <!-- 开始按钮 -->
+          <div class="windows-start">
+            <div class="startup-left">
+              <div>
+                <img src="img/system_icon/icons8-menu-64.png" alt="">
+              </div>
+              <div>
+                <img src="img/system_icon/icons8-administrator-male-64.png" alt="">
+              </div>
+              <div>
+                <img src="img/system_icon/icons8-settings-96.png" alt="">
+              </div>
+              <div>
+                <img src="img/system_icon/icons8-shutdown-64.png" alt="">
+              </div>
+            </div>
+            <div class="startup-middle"></div>
+            <div class="startup-right"></div>
+          </div>
         </div>
         <div class="taskbar-icon" title="windows folder">
           <img src="img/logo_windows_folder.png" alt="">
