--- a/demo/windows10/index.html
+++ b/demo/windows10/index.html
@@ -23,8 +23,8 @@
 
     <!-- 右键菜单 -->
     <ul id="context-menu">
-      <li><span>Back</span><span>Alt+Left Arrow</span></li>
-      <li><span>Forward</span><span>Alt+Right Arrow</span></li>
+      <li><span class="history_back">Back</span><span>Alt+Left Arrow</span></li>
+      <li><span class="history_forward">Forward</span><span>Alt+Right Arrow</span></li>
       <li><span class="reload">Reload</span><span>Ctrl+R</span></li>
       <hr>
       <li><span>Save As...</span><span>Ctrl+S</span></li>
