--- a/demo/windows10/index.html
+++ b/demo/windows10/index.html
@@ -21,6 +21,7 @@
       numquam!
     </div>
 
+    <!-- TODO: 有问题，应该是windos桌面的右键menu -->
     <!-- 右键菜单 -->
     <ul id="context-menu">
       <li><span class="history_back">Back</span><span>Alt+Left Arrow</span></li>
@@ -59,8 +60,136 @@
                 <img src="img/system_icon/icons8-shutdown-64.png" alt="">
               </div>
             </div>
-            <div class="startup-middle"></div>
-            <div class="startup-right"></div>
+            <!-- 开始按钮 Apps -->
+            <div class="startup-middle">
+              <ul class="startup-middle-ul">
+                <div>Recently Added</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                </li>
+                <div>Most used</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>#</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>A</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>C</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>F</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>G</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>C</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>F</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+                <div>G</div>
+                <li>
+                  <div><img src="img/system_icon/icons8-calculator-64.png" alt=""><span>Calendar</span></div>
+                  <div><img src="img/system_icon/icons8-camera-64.png" alt=""><span>Camera</span></div>
+                  <div><img src="img/system_icon/icons8-map-64.png" alt=""><span>Map</span></div>
+                </li>
+              </ul>
+            </div>
+            <!-- 磁贴 -->
+            <div class="startup-right">
+              <div class="metro-left">
+                <div class="metro-group">
+                  <section>System</section>
+                  <div class="metro-parent">
+                    <div><img src="img/system_icon/icons8-calculator-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-facebook-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-headphones-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-people-64.png" alt=""></div>
+                  </div>
+                </div>
+                <div class="metro-group">
+                  <section>System</section>
+                  <div class="metro-parent">
+                    <div><img src="img/system_icon/icons8-calculator-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-facebook-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-headphones-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-people-64.png" alt=""></div>
+                  </div>
+                </div>
+              </div>
+              <div class="metro-right">
+                <div class="metro-group">
+                  <section>System</section>
+                  <div class="metro-parent">
+                    <div><img src="img/system_icon/icons8-calculator-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-facebook-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-headphones-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-people-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                  </div>
+                </div>
+                <div class="metro-group">
+                  <section>System</section>
+                  <div class="metro-parent">
+                    <div><img src="img/system_icon/icons8-calculator-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-facebook-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-headphones-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-people-64.png" alt=""></div>
+                  </div>
+                </div>
+                <div class="metro-group">
+                  <section>System</section>
+                  <div class="metro-parent">
+                    <div><img src="img/system_icon/icons8-calculator-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-facebook-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-headphones-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-calendar-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-camera-64.png" alt=""></div>
+                    <div><img src="img/system_icon/icons8-people-64.png" alt=""></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="taskbar-icon" title="windows folder">
@@ -114,8 +243,21 @@
       </div>
       <!-- 任务栏右侧系统图标 -->
       <div id="system-tray">
-        <div class="tray">
+        <div class="tray tray-hide-icon">
           <img src="img/system_icon/icons8-chevron-up-64.png" alt="">
+          <!-- 隐藏的图标 -->
+          <div class="tray-hide-icon-control">
+            <img src="img/system_icon/icons8-defense-64.png" alt="">
+            <img src="img/system_icon/icons8-bluetooth-96.png" alt="">
+            <img src="img/system_icon/icons8-leaf-64.png" alt="">
+            <img src="img/system_icon/icons8-chrome-64.png" alt="">
+            <img src="img/system_icon/icons8-microsoft-edge-64.png" alt="">
+            <img src="img/system_icon/icons8-people-64.png" alt="">
+            <img src="img/system_icon/icons8-skype-64.png" alt="">
+            <img src="img/system_icon/icons8-vpn-96.png" alt="">
+            <img src="img/system_icon/icons8-alarm-clock-64.png" alt="">
+            <img src="img/system_icon/icons8-map-64.png" alt="">
+          </div>
         </div>
         <div class="tray tray-power">
           <img src="img/system_icon/icons8-full-battery-96.png" alt="">
@@ -227,8 +369,14 @@
             </div>
           </div>
         </div>
-        <div class="tray">
-          <img src="img/system_icon/icons8-settings-96.png" alt="">
+        <div class="tray tray-input">
+          <img src="img/system_icon/icons8-language-64.png" alt="">
+          <!-- 输入法 -->
+          <div class="tray-input-control">
+            <div><img src="img/system_icon/icons8-language-64.png" alt=""><span>English</span></div>
+            <div><img src="img/system_icon/icons8-language-64.png" alt=""><span>Chinese</span></div>
+            <div><img src="img/system_icon/icons8-language-64.png" alt=""><span>Language preferences</span></div>
+          </div>
         </div>
         <div class="tary date-time">
           <div class="tray-date-time">
@@ -237,7 +385,7 @@
           </div>
         </div>
         <div class="tray notification">
-          <img src="img/system_icon/icons8-note-96.png" alt="">
+          <img src="img/system_icon/icons8-sms-64.png" alt="">
         </div>
         <div class="tray">
           <div class="show-desktop"></div>
@@ -246,7 +394,9 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/jquery-script.js"></script>
 </body>
 
 </html>
