--- a/demo/windows10/index.html
+++ b/demo/windows10/index.html
@@ -16,27 +16,105 @@
   <div id="container">
     <!-- 桌面 -->
     <div id="desktop">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero libero fugiat impedit doloribus repudiandae,
-      placeat earum, maxime, totam cumque magni aspernatur. Voluptate natus inventore dolore, aspernatur at fuga qui
-      numquam!
+      
     </div>
 
     <!-- TODO: 有问题，应该是windos桌面的右键menu -->
     <!-- 右键菜单 -->
-    <ul id="context-menu">
-      <li><span class="history_back">Back</span><span>Alt+Left Arrow</span></li>
-      <li><span class="history_forward">Forward</span><span>Alt+Right Arrow</span></li>
-      <li><span class="reload">Reload</span><span>Ctrl+R</span></li>
-      <hr>
-      <li><span>Save As...</span><span>Ctrl+S</span></li>
-      <li><span class="print">Print...</span><span>Ctrl+P</span></li>
-      <li><span>Cast...</span><span></span></li>
-      <li><span>Translate to 中文</span><span></span></li>
-      <hr>
-      <li><span>View page source</span><span>Ctrl+U</span></li>
-      <!-- TODO: 打开控制台 -->
-      <li><span class="inspect">Inspect</span><span>Ctrl+Shift+I</span></li>
-    </ul>
+    <!-- <ul id="context-menu">
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>View</span>
+          <span>→</span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Sort By</span>
+          <span>→</span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Refresh</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Paste</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Paste shortcut</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Undo Move</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Graphics Properties...</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>Graphics Options</span>
+          <span>→</span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="" alt="">
+          <span>New</span>
+          <span></span>
+          <ul>
+            <li>
+              <div>
+                <img src="img/system_icon/icons8-wi-fi-logo-64.png" alt="">
+                <span>Folder</span>
+              </div>
+            </li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+            <li><div></div></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="img/system_icon/icons8-administrator-male-64.png" alt="">
+          <span>Screen resolution</span>
+          <span></span>
+        </div>
+      </li>
+      <li>
+        <div class="cm-f1">
+          <img src="img/system_icon/icons8-airplane-mode-off-96.png" alt="">
+          <span>Personalize</span>
+          <span></span>
+        </div>
+      </li>
+    </ul> -->
 
     <!-- 任务栏 -->
     <div id="taskbar">
